--- a/src/template.html
+++ b/src/template.html
@@ -15,6 +15,7 @@
 
   <body>
     <img
+      data-tilt
       src="img/Gambar WhatsApp 2024-05-17 pukul 00.44.27_32a8a5e2.jpg"
       class="lgo"
       alt=""
